배터리 꺼지기 전에

--- a/app/src/main/res/layout/fragment_featured_view_v3.xml
+++ b/app/src/main/res/layout/fragment_featured_view_v3.xml
@@ -39,56 +39,23 @@
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
-                >
-                <ImageButton
-                    android:id="@+id/showSideNavigationButton"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:background="@null"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/menu"
-                    android:tint="@color/colorPrimaryDark"/>
-            </android.support.v7.widget.Toolbar></android.support.design.widget.CollapsingToolbarLayout>
+
+                ></android.support.v7.widget.Toolbar></android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
     <include
         layout="@layout/fragment_featured_inside_view_v3"
         ></include>
 
-    <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_margin="@dimen/fab_margin"
-        app:fabColor="#ffffff"
-        app:fabIcon="@drawable/ic_location"
-        app:fabIconColor="@color/colorPrimaryDark"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        app:fabIconPosition="start"
-        app:fabSizes="normal"
-        app:fabTextAllCaps="true"
-        app:fabType="roundedSquare"
+        android:tooltipText="지도에서 찾기"
         app:layout_anchor="@+id/app_bar"
-        app:layout_anchorGravity="left|bottom"
-        />
+        app:layout_anchorGravity="left|bottom">
 
-    <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
-        android:id="@+id/customFAB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        app:fabColor="#acdace"
-        app:fabElevation="5dp"
-        app:fabIcon="@drawable/ic_location"
-        app:fabIconColor="#123098"
-        app:fabIconPosition="start"
-        app:fabSizes="normal"
-        app:fabTextAllCaps="true"
-        app:fabType="circle"
-        app:layout_anchor="@+id/app_bar"
-        app:layout_anchorGravity="left|center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+    </android.support.design.widget.FloatingActionButton>
 
 </android.support.design.widget.CoordinatorLayout>
