--- a/app/src/main/res/layout/view_default_recycler_container_view.xml
+++ b/app/src/main/res/layout/view_default_recycler_container_view.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop ="10dp"
+    android:layout_margin="5dp"
     >
     <TextView
         android:id="@+id/subtitleText"
@@ -22,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:textStyle="bold"
         android:text="필드 이름"
         android:textColor="@color/textDark"
         android:textSize="18sp"
