--- a/app/src/main/res/layout/card_featured_menu_v3.xml
+++ b/app/src/main/res/layout/card_featured_menu_v3.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginRight="14.3dp"
+        android:layout_marginEnd="30dp"
         android:background="@drawable/dish_rectangle">
 
         <com.makeramen.roundedimageview.RoundedImageView
