--- a/app/src/main/res/layout/card_featured_store_v3.xml
+++ b/app/src/main/res/layout/card_featured_store_v3.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="19.7dp"
+
+        android:layout_marginEnd="22dp"
         android:orientation="vertical">
 
         <ImageView
