--- a/app/src/main/res/layout/fragment_featured_view_v3.xml
+++ b/app/src/main/res/layout/fragment_featured_view_v3.xml
@@ -24,12 +24,13 @@
             <ImageView
                 android:id="@+id/expandedImage"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
+                android:layout_height="250dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/feature_widget_view"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7"
                 android:background="@color/cardview_shadow_start_color"
+
                 />
 
             <android.support.v7.widget.Toolbar
