--- a/app/src/main/res/layout/activity_login_v2.xml
+++ b/app/src/main/res/layout/activity_login_v2.xml
@@ -60,7 +60,7 @@
 
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/linearLayout2"
+            android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -71,7 +71,7 @@
 
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/text_input_layout"
+                android:id="@+id/text_input_layout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="Widget.Design.TextInputLayout"
