--- a/app/src/main/res/layout/fragment_featured_view_v3.xml
+++ b/app/src/main/res/layout/fragment_featured_view_v3.xml
@@ -18,7 +18,9 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+
+            >
 
 
             <ImageView
@@ -40,7 +42,17 @@
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
 
-                ></android.support.v7.widget.Toolbar></android.support.design.widget.CollapsingToolbarLayout>
+                ></android.support.v7.widget.Toolbar>
+
+            <TextView
+                style="@style/Widget.Design.TextInputLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="색다른\n데이트 코스\n푸들에서 만들어보세요."
+                android:layout_marginLeft="18dp"
+                android:layout_marginTop="108dp"
+                android:textSize="27dp" />
+        </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
     <include
