--- a/app/src/main/res/layout/card_featured_store_v2.xml
+++ b/app/src/main/res/layout/card_featured_store_v2.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="19.7dp"
@@ -13,56 +14,92 @@
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/storeImage"
-            app:riv_corner_radius="10dp"
             android:layout_width="207.3dp"
             android:layout_height="140dp"
             android:layout_gravity="center"
-            android:src="@drawable/demo_menu_real_image"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/demo_menu_real_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:riv_corner_radius="4dp"/>
 
         <TextView
             android:id="@+id/storeNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:maxLength="15"
             android:text="Parata"
+            android:textColor="#373737"
             android:textSize="16.7sp"
-            android:layout_marginTop="13dp"
-            android:textColor="#373737"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/storeImage"/>
 
 
         <TextView
             android:id="@+id/captionText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Punjabi"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:maxWidth="256dp"
+            android:maxLength="120"
+            android:maxLines="2"
+            android:text="@string/dummy_content_cicero"
+            android:textColor="#a5a5a5"
             android:textSize="12.7sp"
-            android:maxLength="40"
-            android:layout_marginTop="11.7dp"
-            android:textColor="#a5a5a5"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/storeNameTextView"/>
 
         <TextView
             android:id="@+id/locationText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
             android:text="Rs 500 / person (app.)"
+            android:textColor="#a5a5a5"
             android:textSize="12.7sp"
-            android:layout_marginTop="5.7dp"
-            android:textColor="#a5a5a5"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/captionText"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="9.3dp"
-            android:orientation="horizontal">
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/locationText">
 
             <me.zhanghai.android.materialratingbar.MaterialRatingBar
+                style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="?android:attr/ratingBarStyleSmall"
                 android:isIndicator="true"
                 android:rating="4"
                 />
-<!--
+            <!--
             <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -77,15 +114,15 @@
                 android:id="@+id/tv_review"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0 Review"
-                android:textSize="9.7sp"
-                android:layout_marginLeft="3dp"
                 android:layout_gravity="center"
+                android:layout_marginLeft="3dp"
                 android:gravity="center_horizontal"
-                android:textColor="#a5a5a5"/>
+                android:text="0 Review"
+                android:textColor="#a5a5a5"
+                android:textSize="9.7sp"/>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
