--- a/app/src/main/res/layout/column_item.xml
+++ b/app/src/main/res/layout/column_item.xml
@@ -13,20 +13,21 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-    <android.support.v7.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:duplicateParentState="true"
-        card_view:cardBackgroundColor="#ffffff"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="2dp"
-        card_view:cardPreventCornerOverlap="true"
-        card_view:cardUseCompatPadding="true"
-        >
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:duplicateParentState="true"
+    card_view:cardBackgroundColor="#ffffff"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="2dp"
+    card_view:cardPreventCornerOverlap="true"
+    card_view:cardUseCompatPadding="true"
+    >
 
         <ImageView
             android:layout_width="300dp"
@@ -34,7 +35,7 @@
             android:layout_marginRight="12dp"
             android:cropToPadding="false"
             android:id="@+id/ImageSelecterImage"
-            android:src="@drawable/ic_launcher" />
+            tools:src="@drawable/oval" />
 
         <TextView
             android:id="@+id/text"
